# pupil-distance-detector

./: .gitignore  README.md  main.py  pyproject.toml
src/pupil_distance_detector/: __init__.py  main.py
src/pupil_distance_detector/edge_detection/: __init__.py  canny.py  sobel.py
src/pupil_distance_detector/feature_detection/: __init__.py  candidate_selection.py  contour.py  hough_circle.py
src/pupil_distance_detector/measurement/: __init__.py  center_estimation.py  distance.py
src/pupil_distance_detector/pipelines/: base.py  factory.py  pipeline_v1.py  pipeline_v2.py  pipeline_v3.py
src/pupil_distance_detector/preprocessing/: binarization.py  blur.py  morphology.py  perspective.py
src/pupil_distance_detector/utils/: __init__.py  drawing.py  image_io.py  models.py
