[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pupil-distance-detector"
version = "0.1.0"
description = "Modular classical computer vision pipelines for pupil detection and inter-pupil distance measurement."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
